# jaded

./: .clang-format  .gitignore  CMakeLists.txt  Run Editor.lnk  Run Game.lnk  changes.txt  create_release.bat  legal.txt  maplist.txt  readme.md  run_console.bat  run_editor.bat  run_window.bat
Dlls/: MAD.DSW  MAD.sln  (+1 more)
Dlls/MAD_rasterize/Make/: CMakeLists.txt  MAD_Rasterize.dsp  MAD_Rasterize.vcproj  MAD_Rasterize.vcproj.7.10.old  MAD_Rasterize.vcxproj  MAD_Rasterize.vcxproj.filters
Libraries/Dx9/: CMakeLists.txt  DX9blending.c  DX9blending.h  DX9buffer.c  DX9buffer.h  DX9console.c  DX9console.h  DX9draw.c  DX9draw.h  DX9gauges.c  DX9gauges.h  DX9init.c  DX9init.h  DX9matrix.c  DX9matrix.h  DX9renderstate.c  DX9renderstate.h  DX9request.c  DX9request.h  DX9samplerstate.c  DX9samplerstate.h  DX9struct.h  DX9tex.c  DX9tex.h  DX9texturestagestate.c  DX9texturestagestate.h  DX9uv.h  Dx9.vcproj  Dx9.vcxproj  Dx9.vcxproj.filters
Libraries/SDK/: CMakeLists.txt
Libraries/SDK/Make/: SDK.dsp  SDK.vcproj  SDK.vcproj.7.10.old  SDK.vcxproj  SDK.vcxproj.filters  SDK_xb.dsp  SDK_xb.vcproj
Libraries/SDK/Sources/: Precomp.c  Precomp.h  projectconfig.h  stdbool.h  stdint.h
Libraries/SDK/Sources/BASe/: BAS.c  BAS.h  BASarray.c  BASarray.h  BAScrc.c  BAScrc.h  BASlog.c  BASlog.h  BASsys.h  BAStypes.h  BASversion.h
Libraries/SDK/Sources/BIGfiles/: BIG.c  BIG.h  BIGcheck.c  BIGcheck.h  BIGchecksum.c  BIGchecksum.h  BIGcomp.c  BIGcomp.h  BIGdefs.c  BIGdefs.h  BIGerrid.h  BIGexport.c  BIGexport.h  BIGfat.c  BIGfat.h  BIGgroup.c  BIGgroup.h  BIGio.c  BIGio.h  BIGkey.c  BIGkey.h  BIGmdfy_dir.c  BIGmdfy_dir.h  BIGmdfy_file.c  BIGmdfy_file.h  BIGmerge.c  BIGmerge.h  BIGopen.c  BIGopen.h  BIGread.c  BIGread.h  BIGspecial.c  BIGspecial.h  lzoconf.h  minilzo.c  minilzo.h
Libraries/SDK/Sources/GameCube/: GC_File.c  GC_File.h  GC_Stream.h  GC_aramheap.c  GC_aramheap.h  GC_arammng.c  GC_arammng.h
Libraries/SDK/Sources/INOut/: INO.c  INO.h  INOfile.c  INOfile.h  INOjoystick.c  INOjoystick.h  INOkeyboard.c  INOkeyboard.h  INOlang.c  INOsaving.c  INOsaving.h  INOstruct.h
Libraries/SDK/Sources/IOP/: CDV_Manager.h  RPC_Manager.h
Libraries/SDK/Sources/LINks/: LINK.cpp  LINK.h  LINKmsg.cpp  LINKmsg.h  LINKstruct.cpp  LINKstruct.h  LINKstruct_reg.cpp  LINKstruct_reg.h  LINKtoed.cpp  LINKtoed.h
Libraries/SDK/Sources/MATHs/: MATH.c  MATH.h  MATH_MEM.c  MATH_MEM.h  MATHasm.h  MATHconst.h  MATHdebug.c  MATHdebug.h  MATHextern.h  MATHfloat.h  MATHinit.c  MATHinit.h  MATHlong.h  MATHmatrix.h  MATHmatrixAdvanced.c  MATHmatrixAdvanced.h  MATHmatrixBase.c  MATHmatrixBase.h  MATHmatrixRot.c  MATHmatrixRot.h  MATHmatrixScale.c  MATHmatrixScale.h  MATHmatrixTrans.h  MATHmatrixTransform.c  MATHmatrixTransform.h  MATHquat.h  MATHstruct.h  MATHvars.c  MATHvars.h  MATHvector.h  MATHvector_ALIGNED.h
Libraries/SDK/Sources/MC/: MC_Manager.h
Libraries/SDK/Sources/Random/: PerlinNoise.c  PerlinNoise.cpp  PerlinNoise.h  random.h
Libraries/SDK/Sources/TABles/: TABles.c  TABles.h  TABvars.c  TABvars.h
Libraries/SDK/Sources/TIMer/: TIM.c  TIM.h  TIMdefs.c  TIMdefs.h
Libraries/SDK/Sources/Xenon/: kingkong.spa  kingkong.spa.h  kingkong.xlast
Main/: CMakeLists.txt  Jade.dsw  Jade.sln  Jade.sln.old
Main/MainGameCube/: MainGameCube.c
Main/MainGameCube/Data/: KingKingIcon.tpl  Licensed_By_Nintendo.bik  opening.bnr
Main/MainPC/: MainPC.vcproj  MainPC.vcproj.7.00.old  MainPC.vcxproj  MainPC.vcxproj.filters  mainPC.c
Main/MainPC/Sources/: mainPC.c
Main/MainPsx2/Make/: ee.cfg  eeMakefile.mak  iop.cfg  iopMakefile.mak  makefile
Main/MainPsx2/Sources/: BenchMain.c  PSX2debug.h  PSX2struct.h  psx2Entry.c  psx2Entry.h  psx2main.c
Main/MainXbox/: MainXBox.dsp  MainXBox.vcproj  MainXBox.vcproj.7.10.old  MainXBox.vcxproj  MainXBox.vcxproj.filters  font.xpr  saveimage.xbx
Main/MainXbox/Sources/: ExceptionHandler.c  ExceptionHandler.h  Precomp.h  WinMain.c
Main/MainXenon/: MainXenon_71.vcproj  MainXenon_71.vcproj.7.10.old  MainXenon_71.vcxproj  Precomp.h
Main/MainXenon/Sources/: BinarizedBFManager.cpp  BinarizedBFManager.h  XenonMain.cpp
Main/Shared/: ImGuiInterface.cpp  ImGuiInterface.h  MainSharedApp.cpp  MainSharedApp.h  MainSharedSystem.cpp  MainSharedSystem.h  Profiler.h
Main/Shared/FileSystem/: FileSystem.cpp  FileSystem.h
Main/WinEditors/Make/: CMakeLists.txt  Jade.ini  MainEdi.dsp  MainEdi.vcproj  MainEdi.vcproj.7.10.old  MainEdi.vcxproj  MainEdi.vcxproj.filters  MainEdiExe.vcproj  MainEdiXenonExe.vcproj  cpp.hint
Main/WinEditors/Sources/: EDIFileFilters.cpp  EDIFileFilters.h  EDIaction.cpp  EDIaction.h  EDIapp.cpp  EDIapp.h  EDIapp_help.cpp  EDIapp_options.h  EDIbaseframe.cpp  EDIbaseframe.h  EDIbaseframe_ini.cpp  EDIbaseview.cpp  EDIbaseview.h  EDIbaseview_game.cpp  EDIbaseview_ini.cpp  EDIbaseview_msg.cpp  EDIeditors_infos.h  EDIeditors_reg.cpp  EDIerrid.h  EDIicons.h  EDImainframe.cpp  EDImainframe.h  EDImainframe_act.cpp  EDImainframe_act.h  EDImainframe_dd.cpp  EDImainframe_desk.cpp  EDImainframe_ini.cpp  EDImainframe_msg.cpp  EDImainframe_universe.cpp  EDImainframe_vss.cpp  EDImsg.h  EDIpaths.h  EDIsplitter.cpp  EDIsplitter.h  EDIstrings.h  EDIundo.cpp  EDIundo.h
Main/WinEngine/Make/: MainEng.dsp  MainEng.vcproj  MainEng.vcproj.7.10.old  MainEng.vcxproj  MainEng.vcxproj.filters
Main/WinEngine/Sources/: MAIwind.c
Tools/Dashboard/Cerbere/: CMakeLists.txt  Cerbere.cpp  Cerbere.h  Cerbere.rc  Cerbere.vcproj  Cerbere.vcxproj  Cerbere.vcxproj.filters  CerbereDlg.cpp  CerbereDlg.h  Defines.h  DefinesShared.h  FileWatch.cpp  FileWatch.h  Main.cpp  Main.h  PCwatch.cpp  PCwatch.h  Splash.cpp  SystemTray.cpp  VersionReader.cpp  VersionReader.h  resource.h  stdafx.cpp  stdafx.h
Tools/GenerateBatch/: CMakeLists.txt  GenerateBatch.cpp  GenerateBatch.sln  GenerateBatch.vcproj  GenerateBatch.vcxproj  GenerateBatch.vcxproj.filters
Tools/Synchronize/Synchronize/: CListCtrlEx.cpp  CListCtrlEx.h  CMakeLists.txt  Synchronize.cpp  Synchronize.h  Synchronize.rc  Synchronize.vcproj  Synchronize.vcxproj  Synchronize.vcxproj.filters  SynchronizeDlg.cpp  SynchronizeDlg.h  resource.h  stdafx.cpp  stdafx.h
(+6580 files in other folders)
